Fix dark mode text visibility issues

--- a/style.css
+++ b/style.css
@@ -1409,7 +1409,7 @@ p::selection{
         min-width: 200px;
         min-height: 200px;
     }
-}
+
 
 
     .take-page-img-cont{
@@ -1986,9 +1986,10 @@ body.dark-mode .form-group input {
 body.dark-mode .form-group input:focus {
     border-color: #bb86fc;
     box-shadow: 0 0 0 3px rgba(187, 134, 252, 0.1);
-    body.dark-mode .login-header h2 {
-    color: #333333;
 }
+ body.dark-mode .login-header h2 {
+    color: #ffffff;
+
 
 }
 body.dark-mode .login-form h2 {
